# Terminal-Portfolio

./: .gitignore  Cargo.toml  README.md  cli_portfolio-a8e0c3f3a6977d08.js  cli_portfolio-a8e0c3f3a6977d08_bg.wasm  index.html
.github/workflows/: deploy.yml
src/: main.rs
